2012-01-25  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/51987
	* tree-data-ref.c (get_references_in_stmt): Handle references in
	non-volatile GIMPLE_ASM.

2012-01-25  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-sccvn.c (vn_reference_eq): Also compare if both
	bases are dereferenced.

2012-01-25  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/48374
	* sel-sched-ir.h (get_all_loop_exits): Check for zero successors. 

2012-01-25  Andrey Belevantsev  <abel@ispras.ru>

	* tree-predcom.c (tree_predictive_commoning_loop): Bail out when
	compute_data_dependences_for_loop returns false.
	* tree-parloops.c (loop_parallel_p): Likewise.

2012-01-25  Richard Guenther  <rguenther@suse.de>

	* tree.h (get_pointer_alignment_1): Declare.
	* builtins.c (get_pointer_alignment_1): New function.
	(get_pointer_alignment): Use it.

2012-01-25  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

	PR rtl-optimization/48308
	* combine.c (enum undo_kind): Add UNDO_LINKS.
	(struct undo): Add member l to other_contents and where.
	(do_SUBST_LINK): New.
	(SUBST_LINK): New.
	(try_combine): Handle LOG_LINKS for the dummy i1 case.
	(undo_all): Handle UNDO_LINKS.

2012-01-25  Richard Henderson  <rth@redhat.com>

	* optabs.c (maybe_emit_atomic_test_and_set): Allow non-QImode
	mem inputs.

2012-01-24  Richard Sandiford  <rdsandiford@googlemail.com>

	* optabs.c (gen_atomic_test_and_set): Use each argument.

2012-01-24  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips-ps-3d.md (mips_addr_ps, reduc_splus_v2sf)
	(mips_cvt_pw_ps, mips_cvt_ps_pw, mips_mulr_ps, mips_cabs_cond_<fmt>)
	(mips_cabs_cond_4s, mips_cabs_cond_ps, bc1any4t, bc1any4f, bc1any2t)
	(bc1any2f, mips_rsqrt1_<fmt>, mips_rsqrt2_<fmt>, mips_recip1_<fmt>)
	(mips_recip2_<fmt>): Require TARGET_MIPS3D rather than
	TARGET_PAIRED_SINGLE_FLOAT.

2012-01-24  Richard Sandiford  <rdsandiford@googlemail.com>

	* doc/rtl.texi (MEM_IN_STRUCT_P, MEM_SCALAR_P): Delete.